[tool.poetry]
name = "hft2ane"
version = "0.1.0"
description = "Tool for exporting Apple Neural Engine-accelerated versions of transformers models on HuggingFace Hub."
authors = ["Anentropic <ego@anentropic.com>"]
readme = "README.md"
license = "Apache 2.0"
packages = [{include = "hft2ane"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.27.4"
ane-transformers = "^0.1.3"
torch = "*"
torchinfo = "*"
asitop = "^0.0.23"
beaupy = "^3.5.3"
art = "^5.9"
numpy = "^1.24.3"

[tool.poetry.group.dev.dependencies]
ipython = "*"
pdbpp = "*"
mypy = "^1.2.0"
ruff = "*"
black = "*"
pytest = "^7.3.1"
pre-commit = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "ane_transformers.*",
    "art.*",
    "asitop.*",
    "beaupy.*",
    "coremltools.*",
    "huggingface_hub.*",
    "transformers.*",
]
ignore_missing_imports = true

[tool.ruff]
ignore = [
    "E501",
]
