[tool.poetry]
name = "hft2ane"
version = "0.1.0"
description = "Tool for exporting Apple Neural Engine-accelerated versions of transformers models on HuggingFace Hub."
authors = ["Anentropic <ego@anentropic.com>"]
readme = "README.md"
license = "Apache 2.0"
packages = [
    {include = "hft2ane"},
    {include = "ane_transformers", from = "vendor/ml-ane-transformers"},
    {include = "exporters", from = "vendor/exporters/src"},
]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "*"
torch = "*"
torchinfo = "*"
numpy = "*"
asitop = "^0.0.23"
beaupy = "^3.5.4"
art = "^5.9"
rich-argparse = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ipython = "*"
pdbpp = "*"
mypy = "^1.2.0"
ruff = "*"
black = "*"
pytest = "^7.3.1"
pre-commit = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    "hft2ane/models/",
]

[[tool.mypy.overrides]]
module = [
    "ane_transformers.*",
    "art.*",
    "asitop.*",
    "beaupy.*",
    "coremltools.*",
    "huggingface_hub.*",
    "transformers.*",
]
ignore_missing_imports = true

[tool.ruff]
ignore = [
    "E501",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Call to deprecated create function FieldDescriptor",
    "ignore:Call to deprecated create function Descriptor",
    "ignore:Call to deprecated create function EnumDescriptor",
    "ignore:Call to deprecated create function EnumValueDescriptor",
    "ignore:Call to deprecated create function FileDescriptor",
    "ignore:Call to deprecated create function OneofDescriptor",
]
