[project]
name = "hft2ane"
version = "0.1.0"
description = "Tool for exporting Apple Neural Engine-accelerated versions of transformers models on HuggingFace Hub."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Anentropic", email = "ego@anentropic.com" },
]
dependencies = [
    "transformers",
    "torch",
    "torchinfo",
    "numpy",
    "coremltools",
    "asitop>=0.0.23",
    "beaupy>=3.5.4",
    "art>=5.9",
    "rich-argparse>=1.1.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "ipython",
    "pdbpp",
    "pytest>=7.3.1",
    "ruff>=0.15.1",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hft2ane"]

[tool.hatch.build.targets.wheel.force-include]
"vendor/ml-ane-transformers/ane_transformers" = "ane_transformers"
"vendor/exporters/src/exporters" = "exporters"

[tool.hatch.build.targets.sdist]
include = ["hft2ane/", "vendor/", "pyproject.toml", "README.md", "LICENSE"]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["hft2ane"]
exclude = ["vendor/**", "hft2ane/models/**", "**/__pycache__", "build/**"]
extraPaths = ["vendor/ml-ane-transformers", "vendor/exporters/src"]
reportMissingTypeStubs = false
reportMissingImports = "warning"
reportPrivateImportUsage = false

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["hft2ane"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B028", "B905"]

[tool.ruff.lint.per-file-ignores]
"vendor/**" = ["ALL"]
"hft2ane/models/**" = ["SIM102", "SIM108"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "convert: tests that export CoreML models (require ANE hardware)",
]
